Delegate issue search to Jira REST API instead of local DB
이슈 검색을 PostgreSQL 의 IssueRepository 대신 Jira REST /rest/api/3/search 로 위임한다.
사용자가 Jira UI 의 Advanced Search 에서 보는 동일한 범위·권한으로 검색이 동작하며
sync 명령으로 DB 를 미리 채울 필요가 없다.

변경:
- JiraApiClient.searchByText(query, maxResults): 신규 인터페이스 메서드
- JiraApiClientImpl.searchByText: JQL `project = X AND text ~ "..." ORDER BY updated DESC` 호출
- JiraSearchHit DTO 신설 (key/summary/status/assignee)
- IssueSearchServiceImpl 재작성: IssueRepository / ClaudeApiClient 의존 제거,
  searchByKeyword/searchSemantic 모두 jiraApiClient.searchByText 위임
- searchSemantic 은 자연어 query 1차 매칭 후 0건이면 fallbackKeyword 로 재시도
- IssueSearchServiceImplTest 재작성: JiraApiClient mock 으로 단순화

검증: ./gradlew test BUILD SUCCESSFUL

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>